--- a/README.me
+++ b/README.me
@@ -1,8 +1,9 @@
 
-start meteor app:
+
+npm i
 npm run start
 
-run tests:
+tests:
 npm run test
 
 settings-dev.json with credentials in ./settings folder is needed
