--- a/README.me
+++ b/README.me
@@ -27,3 +27,10 @@ if checked - status will be 'Working - Contacted' else it will be changed to 'Cl
 permissions must be set on salesforce tables for that user - investigate what will be minimum needed to start campang...
 
 some unit tests exist - but not mocked method - real call to salesforce is triggered...
+
+
+
+CHECK updates and ACTIVITY tasks - campaignID is hardcoded;
+https://eu29.lightning.force.com/lightning/o/Report/home?queryScope=mru
+https://eu29.lightning.force.com/lightning/r/Campaign/7013X000000jUUTQA2/view
+https://eu29.lightning.force.com/lightning/r/Report/00O3X00000BDJFNUA5/view
