--- a/TODO.me
+++ b/TODO.me
@@ -1,4 +1,6 @@
 
+
+try to create campaign - allocate leads - do what needed to be done - update task...
 check token expire - oauth refresh token...
 collect info for minimum needed permisions for salesforce campang 
 check jsforce bulk operations - mass operations & subs if necessary
